UtahLiveDataTest/src/objects/Closeout__c.object
<CustomObject>
    <description>[Business] All the close out information is stored on this object</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledegment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActiveAppName__c</fullName>
        <formula>$Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c</formula>
        <label>ActiveAppName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Grantor Closeout Checklist form</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is usde in Federal Grantee Closeout Checklist form</description>
        <label>Agreement2</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignedToEmail__c</fullName>
        <formula>Grant__r.AssignedTo__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardSubAwardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award SubAwardee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Closeouts</relationshipLabel>
        <relationshipName>Closeouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodEndDate__c</fullName>
        <label>Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodStartDate__c</fullName>
        <label>Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseoutCheckList__c</fullName>
        <label>Closeout Check List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloseoutTime__c</fullName>
        <formula>IF( DueDate__c &gt;= TODAY(), &apos;Upcoming&apos;,&apos;Past&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closeout Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <description>The Date when the Grants is marked to be done</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletionNotes__c</fullName>
        <description>This field is used on the  Completion form of the Close out</description>
        <label>Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaysLeft__c</fullName>
        <formula>If(DueDate__c&gt;Today(),DueDate__c-Today(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>This field stores the due date by which Sub-Awardee is required to Submit the closeout</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnsureReconciliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Ensure Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtensionDays__c</fullName>
        <description>Extension in Number of Days requested by applicant</description>
        <label>Extension in Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtensionJustification__c</fullName>
        <description>Extension Justification</description>
        <label>Extension Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtensionStatus__c</fullName>
        <description>Extension Status by applicant</description>
        <label>Extension Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalOrganization__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalCloseoutReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Federal Closeout Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinalPerformance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Final Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialReports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Financial Reports Reviewed and signed off</description>
        <label>Financial Reports Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantGM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantName__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantSubAwardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the value of the Sub-qAwardee for which Closeout task will be created</description>
        <label>Grant SubAwardee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grant_Closeouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantTerminationReason__c</fullName>
        <description>Field to describe why you would like to get your Grants Terminated</description>
        <label>Grant Termination Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Closeouts</relationshipLabel>
        <relationshipName>Closeouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GranteeChecklist1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Federal Grantee Closeout form.</description>
        <label>Grantee Checklist 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeChecklist2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Federal Grantee Closeout form.</description>
        <label>Grantee Checklist 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeChecklist3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on Federal Grantee Closeout form.</description>
        <label>Grantee Checklist 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <formula>Grant__r.GranteePOC__r.FirstName &amp; &apos; &apos; &amp;  Grant__r.GranteePOC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorCheckList__c</fullName>
        <label>GrantorCheckList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrantsTerminationDate__c</fullName>
        <description>This field is used on the Termination From to Specify the Effective date from when the Grant should be Terminated</description>
        <label>Grants Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Notified&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFieldsByAnnualType__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Annual&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFieldsByAnnualType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFieldsByType__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Final&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideFieldsByType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNotifyButton__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Notify Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRecipientBtn__c</fullName>
        <formula>IF(RecipientAccepted__c=true,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Recipient Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitButton__c</fullName>
        <description>This field is used to show/hide Closeout Submit button</description>
        <formula>IF(  OR(ISPICKVAL( Status__c , &quot;Initiated by PM&quot;),ISPICKVAL( Status__c , &quot;Initiated by GM&quot;), ISPICKVAL( Status__c , &quot;On-hold Rejected&quot;), ISPICKVAL( Status__c , &quot;Rejected by PM&quot;), ISPICKVAL( Status__c , &quot;Rejected by GM&quot;)) &amp;&amp; ($Profile.Name == &apos;Project Admin&apos; || $Profile.Name == &apos;Project Staff&apos;), false, true)</formula>
        <label>HideSubmitButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitforApproval__c</fullName>
        <formula>OR(If(TEXT(Status__c )=&apos;Notification Accepted&apos;,false,true), $Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c =&apos;StateasGrantee&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issue_Closeout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Issue Closeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiquidatedAssests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Grantor Closeout Checklist form.</description>
        <label>Liquidated Assests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liquidateobligations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Liquidate obligations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockDate__c</fullName>
        <description>This date identifies when the Grant record and related records should be locked-out.</description>
        <label>Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Make Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;CL-&apos;+Grant__r.GrantAbbreviation__c+&apos;-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMComments__c</fullName>
        <description>This field is used to store PM comments for Initiating Closeout</description>
        <label>Program Manager Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>POApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRequestReportReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Request Report Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <formula>$Profile.Name</formula>
        <label>ProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressReportReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progress Report Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Grant__r.ProjectTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodEndDate__c</fullName>
        <formula>Grant__r.ProjectPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodStartDate__c</fullName>
        <formula>Grant__r.ProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProofOfLiquidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Grantor Closeout Checklist form.</description>
        <label>Proof Of Liquidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provide_Closeout_Guidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Provide Closeout Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RealandPersonalProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Real and Personal Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecieveandEvaluate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Recieve and Evaluate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecipientAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReconcileFinancial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Reconcile Financial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>Grant__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retainrecords__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Retain records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnFunds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Return Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer (Obsolete)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closeouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskAssesmentReportReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify that the Risk Assessment Report has been reviewed</description>
        <label>Risk Assesment Report Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteVisitReportReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Visit Report Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Notified</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Notification Accepted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitFinancialReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Submit Financial Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitQuarterlyReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used on Closeout Form</description>
        <label>Submit Quarterly Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAwardedBudget__c</fullName>
        <description>This field stores the Total Awarded Budget on the Grant</description>
        <label>Total Awarded Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalExpense__c</fullName>
        <description>This field stores the Total Expense on the Grant</description>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRemainingBudget__c</fullName>
        <description>This field stores the Total Remaining Budget</description>
        <label>Total Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalYTDSpent__c</fullName>
        <description>This field stores the total year to date spent on the Grant</description>
        <label>Total YTD Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Annual Closeout</fullName>
                </value>
                <value>
                    <fullName>Grant Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <description>This field is used to check if a Closeout has been Approved</description>
        <formula>IF( AND(OR( ISPICKVAL(Status__c,&apos;Not Started&apos;), ISPICKVAL(Status__c,&apos;Under PM Review&apos;), ISPICKVAL(Status__c,&apos;Under GM Review&apos;)), OR( $Profile.Name == &apos;Program Manager&apos;, $Profile.Name == &apos;Program User&apos;)), false, IF( AND( $Profile.Name == &apos;Project Admin&apos;, OR( ISPICKVAL(Status__c,&apos;Initiated by PM&apos;), ISPICKVAL(Status__c,&apos;Initiated by GM&apos;), ISPICKVAL(Status__c,&apos;On-hold Approved&apos;), ISPICKVAL(Status__c,&apos;On-hold Rejected&apos;) )) , false, true))</formula>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSubmitted__c</fullName>
        <description>This field is used to display Submit success message</description>
        <formula>IF( ISPICKVAL( Status__c , &quot;Under PM Review&quot;) , true, false)</formula>
        <label>isSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTermination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTermination</label>
        <type>Checkbox</type>
    </fields>
    <label>Closeout</label>
    <listViews>
        <fullName>Closeout_Program_Manager_Closeout</fullName>
        <filterScope>Everything</filterScope>
        <label>Closeout Program Manager</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closeouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Lock_Date</fullName>
        <active>false</active>
        <errorConditionFormula>IF( NOT( ISNULL(LockDate__c) ), IF(  DueDate__c &gt; LockDate__c , true, false) , false)</errorConditionFormula>
        <errorDisplayField>DueDate__c</errorDisplayField>
        <errorMessage>Due Date cannot be greater than Lock Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Less_Than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>DueDate__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>DueDate__c</errorDisplayField>
        <errorMessage>Due Date cannot be less than Today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Date_Less_Than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>LockDate__c &lt; Today()</errorConditionFormula>
        <errorDisplayField>LockDate__c</errorDisplayField>
        <errorMessage>Lock Date cannot be less than Today</errorMessage>
    </validationRules>
</CustomObject>